--- a/src/app/components/secoes/experiencias/experiencias.component.html
+++ b/src/app/components/secoes/experiencias/experiencias.component.html
@@ -8,14 +8,14 @@
     <div class="row flex-wrap justify-content-center g-3 mt-3">
       <div class="col">
         <div class="card">
-          <div class="card-header">
+          <div class="card-header" >
             <span class="rounded-pill text-bg-warning"
               >Mar/2024 - Atualmente</span
             >
             <br />
             <img
               class="my-3"
-              style="max-width: 300px; width: 100%; height: auto"
+              style="max-width: 300px; width: 100%; height: auto; object-fit: cover;"
               src="/assets/logoAcademia.png"
               alt="Logo da Academia do Programador"
             />
@@ -25,10 +25,10 @@
 
           <div class="card-body">
             <p>
-              Responsável pela gestão do setor de produção e pela integração de
-              sistemas internos da empresa, atuando como gerente de produção.
-              Desenvolvia soluções eficientes para otimizar os processos de
-              produção, garantindo o fluxo operacional contínuo.
+              Responsável pelo setor de produção da empresa e integração de
+              aplicações web e sistemas internos, em treinamento como
+              desenvolvedor trainee na Academia do Programador, utilizando .NET
+              e Angular para criar soluções práticas.
             </p>
 
             <p>
@@ -60,18 +60,18 @@
           <div class="card-body">
             <div>
               <p>
-                Responsável pelo setor de produção da empresa e integração de
-                aplicações web e sistemas internos, em treinamento como
-                desenvolvedor trainee na Academia do Programador, utilizando
-                .NET e Angular para criar soluções práticas.
+                Responsável pela gestão do setor de produção, atuando como
+                gerente de produção. Desenvolvia soluções eficientes para
+                otimizar os processos de produção, garantindo o fluxo
+                operacional contínuo.
               </p>
             </div>
 
             <div>
               <p>
                 <span class="fw-semibold">Responsabilidades:</span>
-                Liderança de Equipe, Treinamento, Coordenação, Gestão de tempo,
-                Controle de processos, Comunicação empresarial.
+                Liderança de Equipe, Treinamento, Gestão de tempo, Controle de
+                processos, Comunicação empresarial.
               </p>
             </div>
           </div>
