Ajeitando as barrinhas

--- a/src/app/components/secoes/experiencias/experiencias.component.html
+++ b/src/app/components/secoes/experiencias/experiencias.component.html
@@ -16,7 +16,7 @@
             <img
               class="my-3"
               style="max-width: 300px; width: 100%; height: auto; object-fit: cover;"
-              src="/assets/logoAcademia.png"
+              src="assets/logoAcademia.png"
               alt="Logo da Academia do Programador"
             />
             <br />
@@ -50,7 +50,7 @@
             <img
               style="max-width: 300px; width: 100%"
               class="my-3"
-              src="/assets/logoGeloBom.jpg"
+              src="assets/logoGeloBom.jpg"
               alt="Logo da Gelo Bom"
             />
             <br />
