--- a/src/app/components/secoes/sobre/sobre.component.html
+++ b/src/app/components/secoes/sobre/sobre.component.html
@@ -7,7 +7,7 @@
       <img
         class="img-fluid rounded-pill"
         style="max-width: 300px; width: 100%; height: auto"
-        src="/assets/fotoPerfil.jpg"
+        src="assets/fotoPerfil.jpg"
         alt="Foto De Perfil"
       />
     </div>
